2008-05-07  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-internals.c: (gconf_log):
	* gconf/gconf-sources.c: (gconf_sources_new_from_addresses):
	* gconf/gconfd.c: (main): Merge the desyslogification patch
	from Debian. Also used in Fedora now. Closes bug #126468.

2008-03-17  Sven Herzberg  <sven@imendio.com>

      * gconf-2.m4.in: use AC_HELP_STRING for help strings (so they get
      proper line breaks and consistent indentation)

2008-03-19  Vincent Untz  <vuntz@gnome.org>

	Unblock signals when starting gconfd, since we might inherit some
	blocked signals from the parent process.
	Fix bug #505488.
	Patch by Javier Uruen Val <juruen@warp.es>

	* gconf/gconfd.c: (main): unblock all signals

2008-03-10  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Post release version bump

=========================== gconf 2.22.0 ===========================

2008-02-19  Josselin Mouette  <joss@malsain.org>

	reviewed by: Mark McLoughlin.

	* backends/evoldap-backend.c: (get_variable),
	(get_ldap_connection), (lookup_values_from_ldap): replace 
        functions that have been deprecated in OpenLDAP 2.4 by 
        up-to-date ones. Closes bug#516877.

2008-01-28  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version to 2.21.90.

2008-01-28  Christian Persch  <chpe@gnome.org>

	* gconf/gconf-internals.c: (gconf_value_from_corba_value),
	(gconf_fill_corba_value_from_gconf_value), (gconf_value_decode):
	* gconf/gconf.c: (gconf_engine_all_entries):
	* wrappers/guile/scm-gconf.c: (gconf_value_to_scm): Use G_STRFUNC
	instead of the deprecated G_GNUC_FUNCTION.

2008-01-22  Tor Lillqvist  <tml@novell.com>

	* gconf-zip.in: Look for catalogs in share/locale first, as that
	is where they will be with a properly built GNU gettext.

	* gconf/gconf-internals.c: Map pipe() to _pipe() on Win32.

2008-01-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump to 2.21.3 after release.

================================= 2.21.2 ============================
