@@ -1008,7 +1008,7 @@ gconf_database_schedule_sync(GConfDatabase* db)
   else
     {
       /* 1 minute timeout */
-      db->sync_timeout = g_timeout_add(60000, (GSourceFunc)gconf_database_sync_timeout, db);
+      db->sync_timeout = g_timeout_add_seconds(60, (GSourceFunc)gconf_database_sync_timeout, db);
     }
 }
 
